force-app/main/default/objects/ServiceException__c/ServiceException__c.object-meta.xml
<CustomObject>
    <description>Service Exception relates one or more Exceptions to a Service and defines if an Exception counts towards execution for a Service. Service Exception is related to Service and Exception.</description>
    <label>Service Exception</label>
    <nameField>
        <displayFormat>SE-{0000}</displayFormat>
        <label>Service Exception Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Exceptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>