force-app/main/default/objects/ServiceException__c/fields/Exception__c.field-meta.xml
<CustomField>
    <fullName>Exception__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Exception</label>
    <referenceTo>Exception__c</referenceTo>
    <relationshipLabel>Service Exceptions</relationshipLabel>
    <relationshipName>Service_Exceptions</relationshipName>
    <type>Lookup</type>
</CustomField>