force-app/main/default/objects/ServiceException__c/fields/isExecuted__c.field-meta.xml
<CustomField>
    <fullName>isExecuted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Executed?</label>
    <type>Checkbox</type>
</CustomField>